--- a/comments/templates/comments/comment_form.html
+++ b/comments/templates/comments/comment_form.html
@@ -1,4 +1,55 @@
 {% load comments_tags %}
+{% load static %}
+{% if not user.is_authenticated and not allow_anonymous %}
+{% else %}
+<blockquote>
+	<div id="comment-input-div">
+
+		<form method="POST" action="{% url "comment-create" %}" id="add-comment-form" class="ui reply form">
+			{% csrf_token %}
+			{{ form.errors }}
+
+			{% if target %}
+				<input name="model" value="{% get_model_name target %}" hidden>
+				<input name="model_id" value="{{ target.id }}" hidden>
+				<input name="app_name" value="{% get_app_name target %}" hidden>
+			{% endif %}
+			<div class="ui right action input">
+				<div class="ui left action input">
+				    <div class="none" style="background-color: white;">
+			    		<div class="ui icon input">
+							{{ form.comment }}
+							<input id="id_user" name="user" value="{% if user.is_authenticated %}{{ user.id }}{% endif %}" hidden>
+							<i class="icon"></i>
+						</div>
+					</div>
+				</div>
+				{% if emoji %}
+					{% include 'comments/emojis.html' %}
+				{% endif %}
+				<button class="ui grey icon round button" type="submit" value="Add Comment" id="add-comment"><i class="large right arrow icon"></i></button>
+			</div>
+		</form>
+	</div>
+</blockquote>
+{% endif %}
+
+
+
+<!-- <p style="font-family: Segoe UI Emoji; font-size: 3.5em">
+
+</p> -->
+
+
+
+
+
+
+
+
+
+
+<!-- {% load comments_tags %}
 
 {% if not user.is_authenticated and not allow_anonymous %}
 {% else %}
@@ -20,3 +71,4 @@
 	</div>
 {% endif %}
 
+ -->
