--- a/comments/templates/comments/comment.html
+++ b/comments/templates/comments/comment.html
@@ -4,8 +4,8 @@
 		<div class="metadata">
 	        <div class="date"> {{ object.timestamp | timesince }} ago.</div>
     	</div> 
-	  	{% if object.user %}    	
-	    	{% if object.user.id == user.id or object.content_object.author.id == user.id %}
+	  	{% if object.user %}  
+	    	{% if object.user.id == user.id %}
 	      	<div class="ui right floated dropdown icon mini button" style="background-color: rgba(0,0,0,0); margin-right: 10px; margin-top: 4px;">
 			    <i class="chevron down icon"></i>
 			    <div class="menu">
@@ -14,7 +14,7 @@
 						<a class='comment-edit-class' data-id='{{ object.id }}' style="color: black"><i class="edit icon"></i> Edit</a>		
 			      	</div>
 			      	{% endif %}
-					{% if object.user.id == user.id or object.content_object.author.id == user.id %}
+					{% if object.user.id == user.id %}
 	    		  	<div class="item" data-value="horizontal flip">
 		    		  	<form class="comment-delete-form" method='DELETE' action="{% url "comment-delete" object.pk %}">
 							<input value="{% csrf_token %}" id="csrf" hidden>
