--- a/comments/templates/comments/comment_form.html
+++ b/comments/templates/comments/comment_form.html
@@ -8,7 +8,9 @@
 		<form method="POST" action="{% url "comment-create" %}" id="add-comment-form" class="ui reply form">
 			{% csrf_token %}
 			{{ form.errors }}
-
+			{% if not user.is_authenticated and allow_anonymous %}
+				Name: <input type="text" style="width: 15em;" placeholder="Display Name" name="anonymous_name" required="">
+			{% endif %}
 			{% if target %}
 				<input name="model" value="{% get_model_name target %}" hidden>
 				<input name="model_id" value="{{ target.id }}" hidden>
@@ -20,6 +22,7 @@
 			    		<div class="ui icon input">
 							{{ form.comment }}
 							<input id="id_user" name="user" value="{% if user.is_authenticated %}{{ user.id }}{% endif %}" hidden>
+
 							<i class="icon"></i>
 						</div>
 					</div>
